style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: Georgia, 'Times New Roman', Times, serif;
}

#header{
    position: fixed;
    width: 100%;
    height: 80px;
    background-color: #f7e04a;
    top: 0;
    left: 0;
    color: white;
    z-index: 99;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 1rem 2rem;
    max-width: 2000px;
}

#header-img{
    height: 4.5rem;
    width: 4.5rem;
}

#header h1{
    font-family: Arial;
    margin-left: 1.75rem;
}

.navigation{
    margin-left: auto;
    display: flex;
    align-items: center;
}

.navigation #hamburger-menu{
    font-size: 2.5rem;
    display: none;
}

#nav-bar a{
    font-size: 18px;
    font-style: bold;
    color: white;
    text-decoration: none;
    margin-left: 1.5rem;
}

.nav-toggle{
    display: none;
    width: 25px;
    height: 25px;
}

.hero-section{
    position: relative;
    top: 100px;
    width: 100%;
    height: 230vh;
}

.hero-section h1, h2, input[type="submit"]{
    font-family: "Comic Sans MS", "Comic Sans", cursive;
    text-align: center;
}

#form{
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    align-items: center;
}

input[type="email"]{
    max-width: 170px;
    height: 30px;
    margin-top: 15px;
    border: 1px solid black;
}

input[type="submit"]{
    width: 120px;
    height: 30px;
    background-color: #f7e04a;
    border: none;
    padding: 0 12px;
}

.features{
    margin-top: 45px;
    height: 425px;
}

.features .content{
    margin-top: 70px;
}

.row{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.content{
    height: 300px;
    width: 20rem;
    line-height: 1.6;
    text-align: center;
    padding: 7px 10px 7px 10px;
    border-radius: 25px;
    box-shadow: -3px 5px 9px 8px #5e5d5d;
}

.commercial{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 30px;
}

iframe{
    margin-top: 10px;
    width: 25rem;
    height: 18rem;
    border-radius: 20px;
}

.products{
    position: relative;
    top: 375px;
}

.products h3{
    font-family: "Comic Sans MS", "Comic Sans", cursive;
}

.products .content{
    margin-top: 45px;
    height: 20rem;
}

.products input[type="submit"]{
    margin-top: 20px;
    margin-left: 0;
}


@media screen and (max-width: 1200px) {
    html{
        font-size: 90%;
    }
    
    #header a{
        display: none;
    }

    .navigation #hamburger-menu{
        display: inline-block;
    }

    .nav-bar{
        position: absolute;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
        top: 100%;
        width: 50%;
        height: 100vh;
        right: -100%;
        background-color: #f7e04a;
        transition: .5s linear;
        padding-left: 2.5rem;
    }

    #header nav a{
        display: inline-block;
        text-align: center;
        margin-top: 2.5rem;
        font-size: 18px;
    }

    .nav-toggle:checked ~ .nav-bar{
        right: 0;
    }
}

@media screen and (max-width: 820px){
    .hero-section{
        top: 120px;
        height: 300vh;
    }
    .row{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .content{
        box-shadow: 0 5px 9px 8px #5e5d5d;
    }
}

